--- a/bingo.html
+++ b/bingo.html
@@ -1,5 +1,5 @@
 <!--
-Author: Saloni Goel, 2020
+Authors: Saloni Goel & Abhinav Nair, 2020
 Previous Author: Werner Stoop, 2012
 -->
 <html>
@@ -78,7 +78,6 @@ Previous Author: Werner Stoop, 2012
 
         function generate() {
             var usedWords = [];
-
             var node = document.getElementById("grid");
 
             // generate/restart game
@@ -98,8 +97,8 @@ Previous Author: Werner Stoop, 2012
                     // usedWords.push(obj.friend);
                     var obj = data[x + y * N];
 
-                    // append object html
-                    html += '<td id="cell_' + x + '_' + y + '" ><label><input id="chk-cell_' + x + '_' + y + '" type="button" onclick="cellClicked(\'cell_' + x + '_' + y + "')\">" + obj.song + " - " + obj.artist + "<br>" + obj.quote + "</label></td>";
+                    // create a table object
+                    html += '<td id="cell_' + x + '_' + y + '" ><button class="listenBtn">Listen to Song!</button><br>' + obj.song + " - " + obj.artist + "<br>" + obj.quote + '<br><button id="chk-cell_' + x + '_' + y + '" onClick= "cellClicked(\'cell_' + x + '_' + y + "')\"> Guess! </button></td>";
                 }
                 html += "</tr>"
             }
