--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="bingo.css">
 <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=DM+Mono' rel='stylesheet'>
+<link rel="icon" href="https://img.icons8.com/flat_round/64/000000/whale--v1.png">
 
 <body>
     <h1>Birthday Bingo</h1>
