WIP: Added features (#6)
* cleaning up

* Added leaderboard & browser icon

* add home page title

* add give up feature

* removed unnecessary line

* reading data from file

* disabled right click

* placeholder: made youtube icon clickable

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<!-- Welcome Page -->
+<!-- There's no place like ~ -->
 
 <html>
-<link rel="stylesheet" type="text/css" href="bingo.css">
-<link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet'>
-<link href='https://fonts.googleapis.com/css?family=DM+Mono' rel='stylesheet'>
+
+<head>
+    <title>Birthday Bingo</title>
+    <link rel="stylesheet" type="text/css" href="bingo.css">
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=DM+Mono' rel='stylesheet'>
+    <link rel="icon" href="https://img.icons8.com/flat_round/64/000000/whale--v1.png">
+</head>
 
 <body>
     <h1>Birthday Bingo</h1>
