--- a/bingo.html
+++ b/bingo.html
@@ -1,87 +1,52 @@
 <!--
-Authors: Saloni Goel & Abhinav Nair, 2020
-Previous Author: Werner Stoop, 2012
+    There's no place like ~
+
+    Authors: Saloni Goel & Abhinav Nair, 2020
+    Previous Author: Werner Stoop, 2012
 -->
 <html>
 
 <head>
+    <!-- browser icon -->
+    <script src="https://kit.fontawesome.com/39896120a5.js" crossorigin="anonymous"></script>
+
+    <!-- fonts -->
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=DM+Mono' rel='stylesheet'>
-    <script src="https://kit.fontawesome.com/39896120a5.js" crossorigin="anonymous"></script>
+
+    <!-- css -->
     <link rel="stylesheet" type="text/css" href="bingo.css">
+    <script src="songs.txt"></script>
+
+    <!-- Disable right click http://www.spacegun.co.uk -->
+    <script language=JavaScript>
+        var message = "Haha, really?";
+
+        function rtclickcheck(keyp) {
+            if (navigator.appName == "Netscape" && keyp.which == 3) {
+                alert(message);
+                return false;
+            }
+            if (navigator.appVersion.indexOf("MSIE") != -1 && event.button == 2) {
+                alert(message);
+                return false;
+            }
+        }
+        document.onmousedown = rtclickcheck;
+    </script>
+
     <title>Song Bingo</title>
-    <!-- <script type="text/javascript" src="songs.json"></script> -->
+
     <script type="text/javascript">
-        // var fs = require('fs');
-        // var songs = fs.readFileSync("songs.json", "utf8");
-        // var songs = $.getJSON("https://birthday-bingo.azurewebsites.net/songs.json");
+        var N = N1;
+        var data = data1;
+        var wrong_guesses = new Array(N * N).fill(0);
+        var wrong_guess_threshold = wrong_guess_threshold1;
 
-        // var data = JSON.parse("https://birthday-bingo.azurewebsites.net/songs.json"); //.data;
-        // var N = JSON.parse(songs).N;
-        var N = 3;
-        var data = [{
-            friend: "p1",
-            quote: "\" 1 Sun shining \"",
-            song: "1 Sun shining",
-            link: "www.youtube.com",
-            artist: "1 art"
-        }, {
-            friend: "p2",
-            quote: "\" 2 Sun shining \"",
-            song: "2 Sun shining",
-            link: "www.youtube.com",
-            artist: "2 art"
-        }, {
-            friend: "p3",
-            quote: "\" 3 Sun shining \"",
-            song: "3 Sun shining",
-            link: "www.youtube.com",
-            artist: "3 art"
-        }, {
-            friend: "p4",
-            quote: "\" 4 Sun shining \"",
-            song: "4 Sun shining",
-            link: "www.youtube.com",
-            artist: "4 art"
-        }, {
-            friend: "p5",
-            quote: "\" 5 Sun shining \"",
-            song: "5 Sun shining",
-            link: "www.youtube.com",
-            artist: "5 art"
-        }, {
-            friend: "p6",
-            quote: "\" 6 Sun shining \"",
-            song: "6 Sun shining",
-            link: "www.youtube.com",
-            artist: "6 art"
-        }, {
-            friend: "p7",
-            quote: "\" 7 Sun shining \"",
-            song: "7 Sun shining",
-            link: "www.youtube.com",
-            artist: "7 art"
-        }, {
-            friend: "p8",
-            quote: "\" 8 Sun shining \"",
-            song: "8 Sun shining",
-            link: "www.youtube.com",
-            artist: "8 art"
-        }, {
-            friend: "p9",
-            quote: "\" 9 Sun shining \"",
-            song: "9 Sun shining",
-            link: "www.youtube.com",
-            artist: "9 art"
-        }];
-
-        var cells = {};
-
+        // generate/restart game
         function generate() {
-            var usedWords = [];
             var node = document.getElementById("grid");
 
-            // generate/restart game
             if (node.innerHTML && !confirm("Are you sure you want to regenerate?"))
                 return;
 
@@ -89,27 +54,19 @@ Previous Author: Werner Stoop, 2012
             for (var y = 0; y < N; y++) {
                 html += "<tr>"
                 for (var x = 0; x < N; x++) {
-
-                    // pick a random object
-                    // do {
-                    // 	var i = Math.round(Math.random() * (N*N - 1));
-                    // 	var obj = data[x+y*N];
-                    // } while(usedWords.indexOf(obj.friend) >= 0);
-                    // usedWords.push(obj.friend);
                     var obj = data[x + y * N];
 
                     // create a table object
                     html += '<td id="cell_' + x + '_' + y + '" >' +
                         '<span id="chk-cell_' + x + '_' + y + '" onclick="cellClicked(\'cell_' + x + '_' + y + "')\"> <i class=\"fas fa-dice\"></i></span>" +
                         "\t" + obj.song + " - " + obj.artist +
-                        "<br>" + '<span class="videoLink"><i class="fab fa-youtube"></i></span>' + "\t" + obj.quote +
+                        "<br>" + '<a href="' + obj.link + '" style="color:lightgrey"><i class="fab fa-youtube"></i></a>' + "\t" + obj.quote +
                         "</td>";
                 }
                 html += "</tr>"
             }
             html += "</table>";
             node.innerHTML = html;
-            // node.innerHTML = "<p>"+data+" puppy 1";
             save("bingo.grid", html);
             saveGameState();
         }
@@ -126,6 +83,7 @@ Previous Author: Werner Stoop, 2012
         function cellClicked(id) {
             var c = document.getElementById("chk-" + id);
             var d = document.getElementById(id);
+            var leaderboard = document.getElementById("leaderboard");
             var temp = id.split("_");
             var i = Number(temp[1]) + Number(temp[2]) * N;
 
@@ -134,8 +92,13 @@ Previous Author: Werner Stoop, 2012
                 if (person == data[i].friend) {
                     d.innerHTML = data[i].friend.toUpperCase();
                     d.style.backgroundColor = "#114C80";
-                    //   d.className =(c.checked)?"highlight":"";
+                    leaderboard.innerHTML += data[i].friend + ", ";
                 } else {
+                    wrong_guesses[i]++;
+                    if (wrong_guesses[i] >= wrong_guess_threshold) {
+                        if (confirm("Would you like to give up?"))
+                            alert("The correct answer is " + data[i].friend);
+                    }
                     d.style.backgroundColor = "#E69D29";
                     if (!d.innerHTML.endsWith(", ")) {
                         d.innerHTML += "<br> Wrong guess: ";
@@ -239,7 +202,7 @@ You do not have JavaScript enabled. JavaScript must be enabled for this applicat
         <input type="button" value="Refresh" onClick="generate();" />
     </form>
     <div id="grid"></div>
-    <h2>Leaderboard</h2>
+    <h2>Correct guesses</h2>
     <div id="leaderboard"></div>
 </body>
 
