--- a/bingo.html
+++ b/bingo.html
@@ -1,95 +1,12 @@
 <!--
-<<<<<<< HEAD
-Authors: Saloni Goel & Abhinav Nair, 2020
-Previous Author: Werner Stoop, 2012
-=======
     There's no place like ~
 
     Authors: Saloni Goel & Abhinav Nair, 2020
     Previous Author: Werner Stoop, 2012
->>>>>>> a387a99d19117d6f76ca81b3c2fceaa416500e5e
 -->
 <html>
 
 <head>
-<<<<<<< HEAD
-    <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=DM+Mono' rel='stylesheet'>
-    <link rel="stylesheet" type="text/css" href="bingo.css">
-    <title>Song Bingo</title>
-    <!-- <script type="text/javascript" src="songs.json"></script> -->
-    <script type="text/javascript">
-        // var fs = require('fs');
-        // var songs = fs.readFileSync("songs.json", "utf8");
-        // var songs = $.getJSON("https://birthday-bingo.azurewebsites.net/songs.json");
-
-        // var data = JSON.parse("https://birthday-bingo.azurewebsites.net/songs.json"); //.data;
-        // var N = JSON.parse(songs).N;
-        var N = 3;
-        var data = [{
-            friend: "p1",
-            quote: "\" 1 Sun shining \"",
-            song: "1 Sun shining",
-            link: "www.youtube.com",
-            artist: "1 art"
-        }, {
-            friend: "p2",
-            quote: "\" 2 Sun shining \"",
-            song: "2 Sun shining",
-            link: "www.youtube.com",
-            artist: "2 art"
-        }, {
-            friend: "p3",
-            quote: "\" 3 Sun shining \"",
-            song: "3 Sun shining",
-            link: "www.youtube.com",
-            artist: "3 art"
-        }, {
-            friend: "p4",
-            quote: "\" 4 Sun shining \"",
-            song: "4 Sun shining",
-            link: "www.youtube.com",
-            artist: "4 art"
-        }, {
-            friend: "p5",
-            quote: "\" 5 Sun shining \"",
-            song: "5 Sun shining",
-            link: "www.youtube.com",
-            artist: "5 art"
-        }, {
-            friend: "p6",
-            quote: "\" 6 Sun shining \"",
-            song: "6 Sun shining",
-            link: "www.youtube.com",
-            artist: "6 art"
-        }, {
-            friend: "p7",
-            quote: "\" 7 Sun shining \"",
-            song: "7 Sun shining",
-            link: "www.youtube.com",
-            artist: "7 art"
-        }, {
-            friend: "p8",
-            quote: "\" 8 Sun shining \"",
-            song: "8 Sun shining",
-            link: "www.youtube.com",
-            artist: "8 art"
-        }, {
-            friend: "p9",
-            quote: "\" 9 Sun shining \"",
-            song: "9 Sun shining",
-            link: "www.youtube.com",
-            artist: "9 art"
-        }];
-
-        var cells = {};
-
-        function generate() {
-            var usedWords = [];
-            var node = document.getElementById("grid");
-
-            // generate/restart game
-=======
     <!-- browser icon -->
     <script src="https://kit.fontawesome.com/39896120a5.js" crossorigin="anonymous"></script>
 
@@ -103,7 +20,7 @@ Previous Author: Werner Stoop, 2012
 
     <!-- Disable right click http://www.spacegun.co.uk -->
     <script language=JavaScript>
-        var message = "Haha, really?";
+        var message = "Try not to cheat, sucker.";
 
         function rtclickcheck(keyp) {
             if (navigator.appName == "Netscape" && keyp.which == 3) {
@@ -126,14 +43,14 @@ Previous Author: Werner Stoop, 2012
         var wrong_guess_threshold = wrong_guess_threshold1;
         var wrong_guesses = new Array(N * N).fill(0);
         var correct_guesses = 0;
+        var youTubeUrl = "https://www.youtube.com/embed/MjvFqxuatRc";
+
+
 
         // generate/restart game
         function generate() {
-            document.getElementById("player").innerHTML = "";
             var node = document.getElementById("grid");
-            var usedPlayers = [];
 
->>>>>>> a387a99d19117d6f76ca81b3c2fceaa416500e5e
             if (node.innerHTML && !confirm("Are you sure you want to regenerate?"))
                 return;
 
@@ -141,46 +58,17 @@ Previous Author: Werner Stoop, 2012
             for (var y = 0; y < N; y++) {
                 html += "<tr>"
                 for (var x = 0; x < N; x++) {
-<<<<<<< HEAD
-
-                    // pick a random object
-                    // do {
-                    // 	var i = Math.round(Math.random() * (N*N - 1));
-                    // 	var obj = data[x+y*N];
-                    // } while(usedWords.indexOf(obj.friend) >= 0);
-                    // usedWords.push(obj.friend);
                     var obj = data[x + y * N];
-
-                    // append object html
-                    // html += '<td id="cell_' + x + '_' + y + '" ><label><input id="chk-cell_' + x + '_' + y + '" type="button" onclick="cellClicked(\'cell_' + x + '_' + y + "')\">" + obj.song + " - " + obj.artist + "<br>" + obj.quote + "</label></td>";
-					html += '<td id="cell_'+x+"_"+y+'">'+'<button class="listenBtn">Listen to Song!</button>'+"<br>"+obj.song+ " - " + obj.artist + "<br>" + obj.quote +"<br>"+'<button id="guessBtn" onClick= "cellClicked("cell_'+x+"_"+y+'")">Guess!</button>'+'</td>';
-=======
-                    var obj = data[x + y * N];
-
-                    // pick a random player and add to list
-                    do {
-                        var i = Math.round(Math.random() * (N * N - 1));
-                        var player = data[i].friend;
-                    } while (usedPlayers.indexOf(player) >= 0);
-                    usedPlayers.push(player);
-                    document.getElementById("player").innerHTML += '<li id="player_' + i + '">' + player + '</li>';
-
                     // create a table object
                     html += '<td id="cell_' + x + '_' + y + '" >' +
                         '<span id="chk-cell_' + x + '_' + y + '" onclick="cellClicked(\'cell_' + x + '_' + y + "')\"> <i class=\"fas fa-dice\"></i></span>" +
                         "\t" + obj.song + " - " + obj.artist +
-                        "<br>" + '<a href="' + obj.link + '" style="color:lightgrey"><i class="fab fa-youtube"></i></a>' + "\t" + obj.quote +
-                        "</td>";
->>>>>>> a387a99d19117d6f76ca81b3c2fceaa416500e5e
+                        "<br>" + '<span onClick="openPlayer('+x+')"><i class="fab fa-youtube"></i></span>' + "\t" + obj.quote + "</td>";
                 }
                 html += "</tr>"
             }
             html += "</table>";
             node.innerHTML = html;
-<<<<<<< HEAD
-            // node.innerHTML = "<p>"+data+" puppy 1";
-=======
->>>>>>> a387a99d19117d6f76ca81b3c2fceaa416500e5e
             save("bingo.grid", html);
             saveGameState();
         }
@@ -194,32 +82,11 @@ Previous Author: Werner Stoop, 2012
             }
         }
 
+        
         function cellClicked(id) {
-<<<<<<< HEAD
-			prompt("Enter the name of your friend");
-            // var c = document.getElementById("chk-" + id);
-            // var d = document.getElementById(id);
-            // var temp = id.split("_");
-            // var i = Number(temp[1]) + Number(temp[2]) * N;
-
-            // var person = prompt("Enter the name of the friend " + data[i].friend).toLowerCase();
-            // if (person != null) {
-            //     if (person == data[i].friend) {
-            //         d.innerHTML = data[i].friend.toUpperCase();
-            //         d.style.backgroundColor = "#114C80";
-            //         //   d.className =(c.checked)?"highlight":"";
-            //     } else {
-            //         d.style.backgroundColor = "#E69D29";
-            //         if (!d.innerHTML.endsWith(", ")) {
-            //             d.innerHTML += "<br> Wrong guess: ";
-            //         }
-            //         d.innerHTML += person + ", ";
-            //     }
-            // }
-            // saveGameState();
-=======
             var c = document.getElementById("chk-" + id);
             var d = document.getElementById(id);
+            var leaderboard = document.getElementById("leaderboard");
             var temp = id.split("_");
             var i = Number(temp[1]) + Number(temp[2]) * N;
 
@@ -228,16 +95,14 @@ Previous Author: Werner Stoop, 2012
                 if (person == data[i].friend) {
                     d.innerHTML = data[i].friend.toUpperCase();
                     d.style.backgroundColor = "#114C80";
-                    var player = document.getElementById("player_" + i);
-                    player.innerHTML = "<s>" + player.innerHTML + "</s>";
+                    leaderboard.innerHTML += data[i].friend + ", ";
                     correct_guesses++;
 
-                    if (correct_guesses == 2) {
-                        document.getElementById("player_list").innerHTML = "";
+                    if (correct_guesses == 1) {
                         document.getElementById("grid").innerHTML = '<h1 style="background:#0A7328"> Congratulations! Your prize is loading ...</h1>';
-                        var elem = document.getElementById("progress_bar");
-                        elem.innerHTML = '<h1 style="background:white"> </h1>';
+                        document.getElementById("leaderboard").innerHTML = '<h1 style="background:white"> </h1>';
 
+                        var elem = document.getElementById("leaderboard");
                         var width = 1;
                         var id = setInterval(frame, 100);
 
@@ -265,22 +130,31 @@ Previous Author: Werner Stoop, 2012
                 }
             }
             saveGameState();
->>>>>>> a387a99d19117d6f76ca81b3c2fceaa416500e5e
         }
+
+
+        //open YouTube embedded
+        function openPlayer(id) {
+            var youTubeCode = data[id].link;
+            console.log(youTubeCode);
+            var elem = document.getElementById("embeddedPlayer");
+            document.getElementById("youtubePlayer").src = "https://www.youtube.com/embed/"+youTubeCode;
+            if (elem.style.display == "block")
+                elem.style.display = "none";
+            else
+                elem.style.display = "block";
+        }
+
 
         function saveGameState() {
             for (var y = 0; y < N; y++) {
                 for (var x = 0; x < N; x++) {
                     var id = 'cell_' + x + '_' + y;
                     var c = document.getElementById("chk-" + id);
-<<<<<<< HEAD
                     if (id1.localeCompare(id) != 0)
                         save("bingo." + id1 + "--------" + id, c.checked);
                     else
                         save("bingo." + id + "_" + person, c.checked);
-=======
-                    save("bingo." + id + "_" + c.checked);
->>>>>>> a387a99d19117d6f76ca81b3c2fceaa416500e5e
                 }
             }
         }
@@ -305,17 +179,17 @@ Previous Author: Werner Stoop, 2012
                 elem.style.display = "block";
         }
 
-        save = function(key, value) {};
-        load = function(key) {
+        save = function (key, value) { };
+        load = function (key) {
             return null
         };
 
         function start() {
             if (supports_html5_storage()) {
-                save = function(key, value) {
+                save = function (key, value) {
                     localStorage.setItem(key, value);
                 };
-                load = function(key) {
+                load = function (key) {
                     return localStorage.getItem(key);
                 };
             } else {
@@ -337,57 +211,50 @@ Previous Author: Werner Stoop, 2012
 <body onLoad="start()">
     <h1>Song Bingo</h1>
 
-    <p>An exciting game for your quarantine birthday!<a href="javascript:toggle('instructions');"> Instructions...</a></p>
+    <p>An exciting game for your quarantine birthday!<a href="javascript:toggle('instructions');"> Instructions...</a>
+    </p>
 
     <noscript>
-<div class="error">
-<strong>Problem:</strong>
-<p><em>
-You do not have JavaScript enabled. JavaScript must be enabled for this application to work.
-</em></p>
-</div>
-</noscript>
+        <div class="error">
+            <strong>Problem:</strong>
+            <p><em>
+                    You do not have JavaScript enabled. JavaScript must be enabled for this application to work.
+                </em></p>
+        </div>
+    </noscript>
 
     <div id="instructions">
         <h2>Instructions</h2>
         <ol>
-            <noscript><li>Enable JavaScript</li></noscript>
+            <noscript>
+                <li>Enable JavaScript</li>
+            </noscript>
             <li>Click <strong>Refresh</strong> to create your Bingo board.</li>
-            <li>In the boxes you see the name of a song, its artist, and a quote from the song that someone chose for you </li>
-<<<<<<< HEAD
-            <li>Click on the button in the box to guess who chose this song! </li>
-            <li>If your guess is right, the box will change color and display the name of the person (: </li>
-            <li>If your guess is wrong, the box will show you your incorrect guess to help you narrow your search </li>
-            <li>HINT: The main page of this website should be populated with the people who participated! We restricted this to first names to make it easy </li>
-        </ol>
-    </div>
-=======
+            <li>In the boxes you see the name of a song, its artist, and a quote from the song that someone chose for
+                you </li>
             <li>Click on the <i class="fab fa-youtube"></i> in the box to play the song </li>
-            <li><strong>Click on the <i class="fas fa-dice"></i> in the box to guess who chose this song </strong></li>
+            <li><strong>Click on the <i class="fas fa-dice"></i> in the box to guess who chose this song! </strong></li>
             <li>If your guess is right, the box will change color and display the name of the person (: </li>
             <li>If your guess is wrong, the box will show you your incorrect guess to help you narrow your search </li>
-            <li>HINT: The roster on the left of the grid has names of the people who participated! We restricted this to first names to make it easy. Hit refresh if it hasn't been populated yet </li>
-            <li>Good luck, maybe time yourself?</li>
+            <li>HINT: The main page of this website should be populated with the people who participated! We restricted
+                this to first names to make it easy </li>
         </ol>
     </div>
-    <div style="float:left" id="player_list">
-        <h2 style="margin-bottom:0">Roster</h2>
-        <ul id="player"></ul>
+
+    <div id="embeddedPlayer">
+        <iframe id="youtubePlayer" width="560" height="315" 
+            frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>;
     </div>
->>>>>>> a387a99d19117d6f76ca81b3c2fceaa416500e5e
+
     <form>
         <input type="button" value="Refresh" onClick="generate();" />
     </form>
+
     <div id="grid"></div>
-<<<<<<< HEAD
-    <h2>Leaderboard</h2>
-    <div id="leaderboard"></div>
+    <div id="leaderboard">
+        <h2>Correct guesses</h2>
+    </div>
 </body>
 
 </html>
-=======
-    <div id="progress_bar"></div>
-</body>
-
-</html>
->>>>>>> a387a99d19117d6f76ca81b3c2fceaa416500e5e
